k8s/skywalking/oap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: skywalking-oap
  labels:
    app: skywalking-oap
spec:
  ports:
  - port: 12800
    name: rest
  - port: 11800
    name: grpc
  selector:
    app: skywalking-oap
  type: ClusterIP
