k8s/skywalking/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skywalking-ui
  name: skywalking-ui
  namespace: skywalking
spec:
  ports:
  - name: skywalking-web
    port: 8080
    targetPort: 8080
  selector:
    app: skywalking-ui
  type: ClusterIP
