k8s/skywalking/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: skywalking-ui
  name: skywalking-ui
  namespace: skywalking
spec:
  rules:
    - host: skywalking.k8s-demo.com
      http:
        paths:
          - path: /
            backend:
              serviceName: skywalking-ui
              servicePort: 8080
